Adding french language and account segregation in menu

--- a/FinancialControl/FinancialControl.csproj
+++ b/FinancialControl/FinancialControl.csproj
@@ -216,6 +216,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_GlobalResources\st.fr.designer.cs">
+      <DependentUpon>st.fr.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="App_GlobalResources\st.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -282,6 +287,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Properties\PublishProfiles\Teste.pubxml" />
     <None Include="Properties\PublishProfiles\teste2.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -399,6 +406,11 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="App_GlobalResources\st.fr.resx">
+      <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>st.fr.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="App_GlobalResources\st.es.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
       <LastGenOutput>st.es.designer.cs</LastGenOutput>
